--- a/formulario.html
+++ b/formulario.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadrastro</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" type="text/css" href="formulario.css" media="screen">
 </head>
 <body>
     <div>
-        <h1 id="Titulo">Cadrastro Cliente</h1>
+        <h1 id="Titulo">Cadastro Cliente</h1>
         <p id="Subtitulo">Complete suas informações</p>
         <br>
     </div>
